update to support md vizabi/vizabi#2743 && fix overflow of bubbles layer

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -64,7 +64,6 @@
     }
 
     .vzb-extapimap-svg {
-      overflow: visible;
       &.vzb-zoomin {
         cursor: zoom-in;
       }
